--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 html {
     scroll-behavior: smooth;
 }
@@ -8,13 +7,13 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
-    color: #004C4C;
+    background-color: #004C4C;
+    color: #f0f0f0;
 }
 
 header {
-    background-color: #008080;
-    color: white;
+    background-color: #002F2F;
+    color: #ffffff;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -27,16 +26,20 @@ header h1 {
 }
 
 nav a {
-    color: white;
+    color: #FFA500;
     text-decoration: none;
     margin-left: 1rem;
+}
+
+nav a:hover {
+    text-decoration: underline;
 }
 
 .hero {
     text-align: center;
     padding: 3rem 1rem;
-    background-color: #FFCC80;
-    color: #004C4C;
+    background-color: #CC8400;
+    color: #ffffff;
 }
 
 .video-container iframe {
@@ -49,7 +52,7 @@ nav a {
 
 .portfolio {
     padding: 2rem 1rem;
-    background-color: #f9f9f9;
+    background-color: #003737;
     text-align: center;
 }
 
@@ -69,11 +72,12 @@ nav a {
 .about, .contact {
     padding: 2rem 1rem;
     text-align: center;
+    background-color: #004C4C;
 }
 
 footer {
     text-align: center;
     padding: 1rem;
-    background-color: #008080;
+    background-color: #002F2F;
     color: white;
 }
